edition = "2023";

package runm.v1;

import "buf/validate/validate.proto";
import "google/protobuf/any.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/go_features.proto";
import "google/protobuf/struct.proto";
import "google/protobuf/timestamp.proto";

option features.(pb.go).api_level = API_OPAQUE;
option features.field_presence = IMPLICIT;  // makes everything by default required, for optional set to EXPLICIT

service EventService {
	rpc ReceiveEvents(google.protobuf.Empty) returns (stream PublishEventsResponse);


	rpc PublishEvent(PublishEventRequest) returns (PublishEventResponse);
}

message ReceiveEventsRequest {}

message PublishEventRequest {
	string topic    = 1;
	bytes  raw_json = 2;
}

message PublishEventResponse {}

message PublishEventsResponse {
	string topic    = 1;
	bytes  raw_json = 2;
}
